--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -3,7 +3,7 @@
 {% for post in featured_big %}
     <div class="p-5 border rounded border-secondary bg-dark mb-2 shadow">
         <div class="container">
-            <strong class="d-inline-block mb-2 text-muted text-uppercase fst-italic">Featured Post</strong>
+            <strong class="d-inline-block mb-2 gradient-text-primary-l2 text-uppercase">Featured Post</strong>
             <h1 class="display-4">{% if post.featured_title %} {{ post.featured_title }} {% else %} {{ post.title }} {% endif %}</h1>
             <p class="lead">{{ post.description }}</p>
             <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Continue Reading</a>
@@ -17,14 +17,14 @@
             <div class="card bg-dark border-secondary shadow h-100">
                 <div class="card-header">
                     <strong>
-                        <a class="link-warning" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
+                        <a class="link-warning gradient-text-warning-l2" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
                         <span class="d-inline-block text-muted">
-                            • <span class="fst-italic">Featured Post</span>
+                            • <span class="gradient-text-secondary-l2">Featured Post</span>
                         </span>
                     </strong>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title">{% firstof post.featured_title post.title %}</h3>
+                    <h3 class="card-title text-word-wrap">{% firstof post.featured_title post.title %}</h3>
                     <p class="mb-0 text-muted">{{ post.body|readtime }}</p>
                     <div class="mb-2">{% include 'blog/includes/post_dates.html' %}</div>
                     <p class="mb-auto">{{ post.description }}</p>
