--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -110,7 +110,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark shadow-sm" aria-label="Main navigation">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'blog:post_list' %}">Khodok's Blog</a>
+            <a class="navbar-brand gradient-text-warning-l2" href="{% url 'blog:post_list' %}">Khodok's Blog</a>
             <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
